--- a/config/config-client-dev.properties
+++ b/config/config-client-dev.properties
@@ -1,5 +1,5 @@
-foo = foo version 21
-democonfigclient.message=hello spring io
+foo = foo version 22
+democonfigclient.message=hello spring io 2
 
 # routes to serviceId
 # routes to url
